--- a/client/public/index.html
+++ b/client/public/index.html
@@ -45,6 +45,7 @@
     -->
   <!-- Materialize.css JS -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
 </body>
 
 </html>
