--- a/client/public/index.html
+++ b/client/public/index.html
@@ -8,6 +8,14 @@
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+
+  <!-- Tags for LinkedIn -->
+  <!-- View on: https://www.linkedin.com/post-inspector/inspect/ -->
+  <meta property="og:title" content="ConnectChore" />
+  <meta name="image" property="og:image" content="%PUBLIC_URL%/assets/CC7.png /">
+  <meta property="og:description" content="ConnectChore will help you organize your household's to-do list all in one place and you can add rewards to make checking items off the list even sweeter!" />
+  <meta property="og:url" content="https://connectchore.herokuapp.com/" />
+
   <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -21,7 +29,7 @@
       Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
-    -->
+  -->
 
   <!-- BootStrap CSS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
