update og:image to the Logo pic

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -12,7 +12,7 @@
   <!-- Tags for LinkedIn -->
   <!-- View on: https://www.linkedin.com/post-inspector/inspect/ -->
   <meta property="og:title" content="ConnectChore" />
-  <meta name="image" property="og:image" content="%PUBLIC_URL%/assets/CC7.png" />
+  <meta name="image" property="og:image" content="%PUBLIC_URL%/assets/CC-Logo.png" />
   <meta property="og:description" content="ConnectChore will help you organize your household's to-do list all in one place and you can add rewards to make checking items off the list even sweeter!" />
   <meta property="og:url" content="https://connectchore.herokuapp.com/" />
 
